--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,14 +1,19 @@
 @import 'variable.less';
 @import 'property.less';
 
+/*首页 main*/
 @import 'template/head.less';
 @import 'template/customInfo.less';
 @import 'template/positionList.less';
 @import 'template/foot.less';
 
+/*职位详情 position*/
 @import 'position.less';
 @import 'template/positionInfo.less';
-@import 'template/company.less';
+@import 'template/companyInfo.less';
+
+/*公司详情 company*/
+@import 'template/positionClass.less';
 
 
 
