--- a/src/style/template/positionInfo.less
+++ b/src/style/template/positionInfo.less
@@ -21,7 +21,7 @@
             width: 15px;
             height: 15px;
             margin: 0 auto;
-            background: url(../../image/icon2.png) no-repeat -116px -20px;
+            background: url(../../image/icon.png) no-repeat -170px -41px;
             background-size: 250px 250px;
         }
         .text {
@@ -48,7 +48,7 @@
             height: 13px;
             width: 13px;
             vertical-align: middle;
-            background: url(../../image/icon2.png) no-repeat -1px -80px;
+            background: url(../../image/icon.png) no-repeat -66px -48px;
             background-size: 250px 250px;
         }
         .text {
