--- a/src/view/position.html
+++ b/src/view/position.html
@@ -1,10 +1,10 @@
 <div app-head-bar text="职位详情"></div>
 <div app-position-info pos="position" is-login="isLogin"></div>
-<div app-company-info></div>
+<div app-company-info com="company"></div>
 <div class="bg-w position-desc">
   <h4>职位描述</h4>
   <div class="content">
-    <p>1.具备美感和鉴赏力</p>
+    1.具备美感和鉴赏力
     <p>2.关注时尚类的公众号、网站，微博</p>
     <p>3.深入浅出的文字表达能力，具备新媒体的内容创作作与传播的经验</p>
     <p>4.新媒体（微信、微博）重度依赖者</p>
@@ -59,4 +59,4 @@
       </li>
   </ul>
 </div>
-<button class="bottom-btn c-w ta-c" ng-click="go()">投个简历</button>
+<button class="bottom-btn c-w ta-c" ng-click="go()" ng-bind="isLogin ? '投个简历' : '去登录'"></button>
