--- a/src/view/template/companyInfo.html
+++ b/src/view/template/companyInfo.html
@@ -2,7 +2,7 @@
     <img src="image/company-3.jpg" alt="" class="logo">
     <div class="desc">
         <div class="dleft">
-            <h2 class="title">一起写</h2>
+            <h2 class="title" ng-bind="name">一起写</h2>
             <p class="info">移动互联网/企业服务/B轮/15-50人</p>
         </div>
         <span class="dright"></span>
