--- a/src/view/template/positionInfo.html
+++ b/src/view/template/positionInfo.html
@@ -1,7 +1,7 @@
 <div class="bg-w position-info p-r">
     <div class="postitle">
-        <h2 class="title f-l">前端开发工程师</h2>
-        <div class="collicon f-r activeable">
+        <h2 class="title f-l" ng-bind="pos.name"></h2>
+        <div ng-show="isLogin" class="collicon f-r activeable">
             <span class="icon notcoll"></span>
             <span class="text">未收藏</span>
         </div>
@@ -10,11 +10,11 @@
             <div class="items">
                 <span class="item salary">
                     <em class="icon"></em>
-                    <span class="text">15k-25k</span>
+                    <span class="text" ng-bind="pos.salaryName"></span>
                 </span>
                 <span class="item workaddress">
                     <em class="icon"></em>
-                    <span class="text">北京</span>
+                    <span class="text" ng-bind="pos.cityName"></span>
                 </span>
                 <span class="item jobnature">
                     <em class="icon"></em>
@@ -22,11 +22,11 @@
                 </span>
                 <span class="item workyear">
                     <em class="icon"></em>
-                    <span class="text">3-5年</span>
+                    <span class="text" ng-bind="pos.experience"></span>
                 </span>
                 <span class="item education">
                     <em class="icon"></em>
-                    <span class="text">本科</span>
+                    <span class="text" ng-bind="pos.education">本科</span>
                 </span>
             </div>
             <div class="temptation clear">职位诱惑：五险一金,弹性工作,年底双薪,带薪年假
