--- a/src/view/template/positionList.html
+++ b/src/view/template/positionList.html
@@ -1,13 +1,13 @@
 <ul class="position-list">
     <li ui-sref="position({id:item.id})" class="item" ng-repeat="item in data">
-        <img class="item-logo f-l d-ib" ng-src="{{item.imgSrc}}" alt="">
+        <img class="item-logo f-l d-ib" ng-src="{{item.imageUrl}}" alt="">
         <div class="item-desc">
             <h2 class="item-title">{{item.companyName}}</h2>
             <p class="item-info">
-                <span class="item-pos f-l d-ib">{{item.name}}</span>
-                <span class="item-salary f-r">10k-16k</span>
+                <span class="item-pos f-l d-ib">{{item.job}}</span>
+                <span class="item-salary f-r">{{item.salaryName}}</span>
             </p>
-            <p class="item-time">{{item.time}}</p>
+            <p class="item-time">{{item.date}}</p>
         </div>
     </li>
 </ul>
