--- a/src/view/template/positionInfo.html
+++ b/src/view/template/positionInfo.html
@@ -26,7 +26,7 @@
                 </span>
                 <span class="item education">
                     <em class="icon"></em>
-                    <span class="text" ng-bind="pos.education">本科</span>
+                    <span class="text" ng-bind="pos.education"></span>
                 </span>
             </div>
             <div class="temptation clear">职位诱惑：五险一金,弹性工作,年底双薪,带薪年假
