--- a/src/view/company.html
+++ b/src/view/company.html
@@ -1,4 +1,4 @@
 
 <div app-head-bar text="公司职位"></div>
-<div app-company-info></div>
-<div app-position-class></div>
+<div app-company-info com="company"></div>
+<div app-position-class com="company"></div>
