--- a/src/view/template/positionClass.html
+++ b/src/view/template/positionClass.html
@@ -1,21 +1,15 @@
 <div class="position-class">
     <div class="positype">
         <span>职位分类</span>
-        <button class="active">技术</button>
-        <button>运营</button>
-        <button>运营</button>
-        <button>运营</button>
-        <button>市场与销售</button>
-        <button>运营</button>
-        <button>运营</button>
+        <button ng-click="isActive=$index" class="{{$index===isActive ? 'active': ''}}" ng-repeat="cls in com.positionClass">技术</button>
     </div>
     <ul class="list">
-        <li class="item">
+        <li class="item" ng-repeat="pos in cls.positionList">
             <div class="left">
-                <h3 class="name">前端工程师</h3>
-                <p class="time">2017-2-26 23:00</p>
+                <h3 class="name" ng-bind="pos.name">前端工程师</h3>
+                <p class="time" ng-bind="pos.createdDate">2017-2-26 23:00</p>
             </div>
-            <span class="right">13k-23k</span>
+            <span class="right" ng-bind="pos.salary">13k-23k</span>
         </li>
     </ul>
 </div>
