--- a/src/style/template/positionClass.less
+++ b/src/style/template/positionClass.less
@@ -6,16 +6,17 @@
         span {
             display: block;
             margin: 0 0 15px 5px;
-            .fs(15);
+            .fs(16);
             
             color: @customColor;
         }
         button {
+        outline: none;
         background-color: @btnbgColor;
         color: @btnColor;
         width: 32%;
         height: 40px;
-        .fs(17);
+        .fs(20);
         padding: 0;
         margin-right: 0px;
         border-radius: 20px;
