--- a/src/view/template/positionInfo.html
+++ b/src/view/template/positionInfo.html
@@ -29,7 +29,7 @@
                     <span class="text" ng-bind="pos.education"></span>
                 </span>
             </div>
-            <div class="temptation clear">职位诱惑：五险一金,弹性工作,年底双薪,带薪年假
+            <div class="temptation clear" ng-bind="pos.benefit">职位诱惑：五险一金,弹性工作,年底双薪,带薪年假
 </div>
         </div>
   <!--<p><span ng-bind="pos.name"></span><span class="ml c-r" ng-bind="pos.salaryName"></span></p>
