--- a/src/style/index.less
+++ b/src/style/index.less
@@ -15,7 +15,8 @@
 /*公司详情 company*/
 @import 'template/positionClass.less';
 
-
+/*搜索页面 company*/
+@import 'search.less';
 
 .fs(@px) {
     font-size: unit(@px / 37.5, rem);
