--- a/src/style/search.less
+++ b/src/style/search.less
@@ -1,21 +1,56 @@
 .search-bar {
-    background: @headbgColor;
-    position: fixed;
-    left: 0;
-    right: 0;
-    .h(40);
-    .lh(40);
-    button {
-        background-color: @headbgColor;
-        color: @defaultColor;
+    background: @defaultColor;
+    position: relative;
+    border-bottom: 1px solid @lineColor;
+    height: 45px;
+    line-height: 45px;
+    .lbutton {
+        float: left;
+        height: 45px;
+        .fs(5);
+        text-align: center;
+        width: 88px;
+        border-right: 1px solid @lineColor;
+        .cityicon {
+            display: inline-block;
+            width: 8.5px;
+            height: 7px;
+            background: url(../image/icon.png) no-repeat -1px -2.5px;
+            background-size: 250px 250px;
+        }
     }
-    input {
-        background-color: @highlightBgColor;
-        border-radius: 6px;
-        border-style: none;
-        outline-width: 0;
-        .pl(20);
-        .h(25);
-        .w(190);
+    .rinput {
+        height: 45px;
+        margin-left: 89px;
+        position: relative;
+        .inputer {
+            outline: none;
+            display: block;
+            border: none;
+            padding: 10px 0;
+            height: 25px;
+            line-height: 25px;
+            color: @listColor;
+            width: 75%;
+            margin: 0 0 0 5%;
+            .fs(5);
+            float: left;
+        }
+        .search {
+            display: inline-block;
+            width: 20%;
+            height: 45px;
+            line-height: 45px;
+            float: right;
+            position: relative;
+            em {
+                display: block;
+                margin: 14px auto 0;
+                width: 17px;
+                height: 17px;
+                background: url(../image/icon.png) no-repeat -14px -2.5px;
+                background-size: 250px 250px;
+            }
+        }
     }
 }
