--- a/src/style/position.less
+++ b/src/style/position.less
@@ -3,7 +3,7 @@
     height: 44px;
     line-height: 44px;
     color: @defaultColor;
-    .fs(17);
+    .fs(5.5);
     background-color: @headbgColor;
     left: 0;
     right: 0;
@@ -14,10 +14,10 @@
 .position-desc {
     h4 {
         margin: 0;
+        .fs(5);
         padding-left: 15px;
-        .h(36);
-        .lh(36);
-        .fs(16);
+        height: 36px;
+        line-height: 36px;
         font-weight: 500;
         color: @headbgColor;
         background-color: @positiondesBg;
@@ -26,7 +26,7 @@
         padding: 15px;
         line-height: 22px;
         margin-left: 0;
-        .fs(15);
+        .fs(4);
         color: @customColor;
     }
 }
@@ -36,9 +36,9 @@
     .eval-title {
         margin: 0;
         padding-left: 15px;
-        .fs(15);
-        .h(36);
-        .lh(36);
+        .fs(5);
+        height: 36px;
+        line-height: 36px;
         font-weight: 500;
         color: @headbgColor;
         background-color: @positiondesBg;
@@ -58,12 +58,12 @@
             .name {
                 position: absolute;
                 margin-left: 40px;
-                .fs(16);
+                .fs(5);
                 top: -4px;
             }
             .time {
                 position: absolute;
-                .fs(12);
+                .fs(2);
                 color: @fontColor;
                 right: 0;
                 top: -4px;
@@ -77,7 +77,7 @@
                 left: 40px;
                 li {
                     margin-right: 3%;
-                    .fs(12);
+                    .fs(2);
                     display: inline-block;
                     .type {
                         color: @listTimeColor;
@@ -97,7 +97,7 @@
             margin-top: 14px;
             margin-bottom: 4px;
             li {
-                .fs(12);
+                .fs(3);
                 color: @fontColor;
                 display: inline-block;
                 border: 1px solid #ccc;
@@ -109,15 +109,15 @@
         }
         .review-content {
             color: #333;
-            .fs(16);
-            .lh(24);
+            .fs(4);
+            line-height: 24px;
         }
         .zan-wrap {
             font-size: 0;
             text-align: right;
             margin-top: 17px;
             .zan {
-                .fs(12);
+                .fs(4);
                 color: @headbgColor;
             }
             i {
@@ -138,11 +138,12 @@
     background-color: @headbgColor;
     height: 45px;
     line-height: 45px;
-    .fs(20);
+    .fs(5.5);
     
     color: @defaultColor;
     
     .left {
+        
         position: absolute;
         left: 0;
         top: 0;
