--- a/src/style/template/companyInfo.less
+++ b/src/style/template/companyInfo.less
@@ -3,8 +3,8 @@
     border-bottom: 1px solid @lineColor;
     padding: 15px;
     .logo {
-        .w(60);
-        .h(60);
+        width: 60px;
+        height: 60px;
         float: left;
     }
     .desc {
@@ -16,12 +16,12 @@
             float: left;
             .title {
                 color: @headbgColor;
-                .fs(19);
+                .fs(6);
                 margin-bottom: 5px;
             }
             .info {
                 color: @listTimeColor;
-                .fs(14);
+                .fs(4);
             }
         }
         .dright {
