--- a/src/view/search.html
+++ b/src/view/search.html
@@ -1,9 +1,15 @@
-<!--<div app-head></div>-->
+<div app-head></div>
 <div class="search-bar ta-c">
-    <button>取消</button>
-    <input type="text" placeholder="搜索职位或公司">
-    <button>搜索</button>
-    <img src="" alt="">
+    <div class="lbutton">
+        <span class="city">全国</span>
+        <span class="cityicon"></span>
+    </div>
+    <div class="rinput">
+        <input class="inputer" type="text" placeholder="搜索职位或公司">
+        <span class="search">
+            <em class="searchicon"></em>
+        </span>
+    </div>
 </div>
 <div app-tab></div>
 <div app-position-list></div>
