--- a/src/style/index.less
+++ b/src/style/index.less
@@ -15,8 +15,10 @@
 /*公司详情 company*/
 @import 'template/positionClass.less';
 
-/*搜索页面 company*/
-@import 'search.less';
+/*搜索页面 search*/
+@import 'template/searchBar.less';
+@import 'template/searchTab.less';
+@import 'template/searchSheet.less';
 
 .fs(@px) {
     font-size: unit(@px / 10, rem);
