--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -14,5 +14,7 @@
 @fontColor: #b2b2b2;
 @btnbgColor: #f5f5f5;
 @btnColor: #c4c4c4;
+@sheetBgColor: #f1f2f3;
+@sheetColor: #1063e5;
+@lineColor: #e8e8e8;
 
-//2bf0263
