--- a/src/view/search.html
+++ b/src/view/search.html
@@ -1,16 +1,6 @@
 <div app-head></div>
-<div class="search-bar ta-c">
-    <div class="lbutton">
-        <span class="city">全国</span>
-        <span class="cityicon"></span>
-    </div>
-    <div class="rinput">
-        <input class="inputer" type="text" placeholder="搜索职位或公司">
-        <span class="search">
-            <em class="searchicon"></em>
-        </span>
-    </div>
-</div>
-<div app-tab></div>
+<div app-search-bar></div>
+<div app-search-tab></div>
+<div app-search-sheet></div>
 <div app-position-list></div>
 <div app-foot></div>
