--- a/src/view/template/headBar.html
+++ b/src/view/template/headBar.html
@@ -3,7 +3,7 @@
     <div class="left" ng-click="back()">
         <span class="corner d-ib"></span>
     </div>
-    <div class="right">
+    <div class="right" ui-sref="main">
         <span class="corner d-ib"></span>
     </div>
 </div>
