add searchList by

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -19,6 +19,7 @@
 @import 'template/searchBar.less';
 @import 'template/searchTab.less';
 @import 'template/searchSheet.less';
+@import 'search.less';
 
 .fs(@px) {
     font-size: unit(@px / 10, rem);
