--- a/src/view/template/searchTab.html
+++ b/src/view/template/searchTab.html
@@ -1,5 +1,5 @@
 <ul class="search-tab">
-    <li class="item active">区域</li>
-    <li class="item">租金</li>
-    <li class="item">排序</li>
+    <li class="item active">城市</li>
+    <li class="item">薪资</li>
+    <li class="item">公司规模</li>
 </ul>
