--- a/src/style/template/searchSheet.less
+++ b/src/style/template/searchSheet.less
@@ -4,7 +4,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.5);
     z-index: 99999;
     .wrap {
         position: fixed;
@@ -12,26 +12,28 @@
         right: 8px; 
         bottom: 8px;
         z-index: 99;
+        .fs(6);
         li,button {
             text-align: center;
-            .fs(6);
             color: @sheetColor;
             display: inline-block;
-            height: 50px;
-            line-height: 50px;
+            height: 40px;
+            line-height: 40px;
             width: 100%;
             background-color: @sheetBgColor;
         }
         button {
             margin-top: 8px;
             border-radius: 5px;
+            .fs(6);
         }
         ul {
             border-radius: 5px;
             overflow: scroll;
             max-height: 500px;
             li {
-                border-bottom: 1px solid @lineColor;
+                border-bottom: 1px solid @listTimeColor;
+;
             }
         }
     }
