--- a/src/view/search.html
+++ b/src/view/search.html
@@ -1,6 +1,6 @@
 <!--<div app-head></div>-->
 <div app-search-bar></div>
-<div app-search-tab></div>
-<div app-search-sheet></div>
-<div class="search-list" app-position-list data="positionList"></div>
+<div app-search-tab list="tabList" tab-click="tClick(id,name)"></div>
+<div app-search-sheet select="sClick(id,name)" visible="sheet.visible" list="sheet.list"></div>
+<div class="search-list" filter-obj="filterObj" app-position-list data="positionList"></div>
 <div app-foot></div>
