--- a/src/view/template/searchTab.html
+++ b/src/view/template/searchTab.html
@@ -1,5 +1,3 @@
 <ul class="search-tab">
-    <li class="item active">城市</li>
-    <li class="item">薪资</li>
-    <li class="item">公司规模</li>
+    <li ng-click="click(item)" ng-repeat="item in list" ng-bind="item.name" class="item {{selectId===item.id ? 'active':''}}">城市</li>
 </ul>
